--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         class="home__title-color-nurse">Registered Nurse</span></h1>
 
                 <a href="mailto:taastha700@gmail.com" class="button">Contact</a>
-                <a href="assets/files/Aastha Thapa-Resume.pdf" class="button">Download CV</a>
+                <a href="assets/files/Aastha Thapa-Resume.pdf" class="button" target="_blank">Download CV</a>
             </div>
 
             <div class="home__social">
