--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         class="home__title-color-nurse">Registered Nurse</span></h1>
 
                 <a href="mailto:taastha700@gmail.com" class="button">Contact</a>
-                <a href="assets/files/Aastha Thapa-Resume.pdf" class="button" target="_blank">Download CV</a>
+                <a href="assets/files/Aastha Thapa-Resume.pdf"  target="_blank" class="button">Download CV</a>
             </div>
 
             <div class="home__social">
@@ -197,8 +197,8 @@
     <footer class="footer">
         <p class="footer__title">Aastha Thapa</p>
         <div class="footer__social">
-            <a href="https://www.facebook.com/aastha.xettri.9210" class="footer__icon"><i class="bx bxl-facebook"></i></a>
-            <a href="https://www.instagram.com/aastha_xetri_/" class="footer__icon"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.facebook.com/aastha.xettri.9210"  target="_blank" class="footer__icon"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/aastha_xetri_/" target="_blank" class="footer__icon"><i class="bx bxl-instagram"></i></a>
             <a href="#" class="footer__icon"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="footer__icon"><i class="bx bxl-snapchat"></i></a>
         </div>
