--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Aastha Thapa</span><br> <span
+                <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Aastha Thapa</span><br> <span
                         class="home__title-color-nurse">Registered Nurse</span></h1>
 
                 <a href="mailto:taastha700@gmail.com" class="button">Contact</a>
@@ -82,7 +82,7 @@
                 </div>
 
                 <div>
-                    <h2 class="about__subtitle">I'am Aastha</h2>
+                    <h2 class="about__subtitle">I'm Aastha</h2>
                     <p class="about__text" align="justify">
                         and my Portfolio is a representation of all that I've learned and accomplished
                         as a Science and Nursing student. In the nursing profession, you deal with many aspects of
@@ -105,7 +105,7 @@
                 <div>
                     <h2 class="skills__subtitle">Profesional Skills</h2>
                     <p class="skills__text">During my education and training period, I learned and mastered
-                        the most important nursing skills needed to be successful in my careers. Some of them are.</p>
+                        the most important nursing skills needed to be successful in my careers. Some of them are</p>
 
                     <div class="skills__data">
                         <div class="skills__names">
